# app-linux-rs

./: INSTALL.md  LICENSE  Makefile  README.md  TESTING.md  immurok-daemon.service
crates/immurok-cli/: Cargo.toml
crates/immurok-cli/src/: enroll_hint.rs  imk_main.rs  main.rs  socket_client.rs
crates/immurok-cli/src/commands/: daemon.rs  fingerprint.rs  fw.rs  info.rs  keys.rs  mod.rs  ota.rs  pair.rs  pam.rs  settings.rs  status.rs
crates/immurok-cli/src/fwupdate/: error.rs  http.rs  mod.rs  push.rs  store.rs
crates/immurok-cli/src/tui/: app.rs  mod.rs  widgets.rs
crates/immurok-common/: Cargo.toml
crates/immurok-common/src/: lib.rs  pam.rs  protocol.rs  security.rs  socket_proto.rs  types.rs
crates/immurok-common/src/fwupdate/: imfw.rs  manifest.rs  mod.rs  planner.rs  version.rs
crates/immurok-daemon/: Cargo.toml
crates/immurok-daemon/src/: ble.rs  coordinator.rs  keystore.rs  main.rs  ota.rs  screen.rs  settings.rs  socket.rs  ssh_agent.rs  suspend.rs
pam/: Makefile  pam_immurok.c
scripts/: ble-notify-helper.py  check-deps.sh  com.immurok.pam-helper.policy.in  immurok-auth-dialog  immurok-pam-helper  test-ble-notify-helper.py  test-pam-helper.sh
