[package]
name = "immurok-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "immurok-cli"
path = "src/main.rs"

[[bin]]
name = "imk"
path = "src/imk_main.rs"

[dependencies]
immurok-common = { path = "../immurok-common" }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
indicatif = "0.17"
serde_json = "1"
hex = "0.4"
base64 = "0.22"
p256 = { version = "0.13", features = ["ecdh"] }
