[package]
name = "immurok-cli"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "immurok-cli"
path = "src/main.rs"

[[bin]]
name = "imk"
path = "src/imk_main.rs"

[dependencies]
immurok-common = { path = "../immurok-common" }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
indicatif = "0.17"
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hex = "0.4"
base64 = "0.22"
p256 = { version = "0.13", features = ["ecdh"] }
