[package]
name = "immurok-common"
version = "0.1.0"
edition = "2021"

[dependencies]
p256 = { version = "0.13", features = ["ecdh"] }
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
subtle = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rand = "0.8"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
