[package]
name = "immurok-daemon"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "immurok-daemon"
path = "src/main.rs"

[dependencies]
immurok-common = { path = "../immurok-common" }
tokio = { version = "1", features = ["full"] }
bluer = { version = "0.17", features = ["bluetoothd"] }
uuid = "1"
zbus = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
base64 = "0.22"
libc = "0.2"
futures-lite = "2"
hex = "0.4"
rand = "0.8"
